# CrewAI

./: .gitignore  agents.py  app_logger.py  code_validator.py  config.py  main.py  memory.py  requirements.txt  search_scraper.py  search_util.py  services.py  shared_context.py  tasks.py  utils.py
db/: search_index.db  search_index.db-shm  search_index.db-wal
resultados/: task_ast_integration_summary_log.md
resultados/ast_integration_FINAL_OUTPUT/: pyproject.toml
resultados/ast_integration_FINAL_OUTPUT/src/llm_token_optimizer/: __init__.py  reducer.py  utils.py
resultados/ast_integration_ac6e008671/workspace/: ARCHITECTURE.md  README.md  file_action_log.json
resultados/ast_integration_ac6e008671/workspace/docs/: usage.md
resultados/ast_integration_ac6e008671/workspace/src/llm_token_optimizer/: api.py  reconstructor.py
resultados/ast_integration_ac6e008671/workspace/tests/: test_e2e.py  test_reconstructor.py  test_reducer.py
versions/: main.py
