[project]
name = "python-llm-token-optimizer"
version = "0.1.0"
authors = [
    { name = "Your Name", email = "your.email@example.com" },
]
description = "A library to optimize LLM token usage by reducing and reconstructing code."
readme = "README.md"
requires-python = ">=3.8"
keywords = ["llm", "token-optimization", "code-reduction", "ast"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/your-username/python-llm-token-optimizer"
Issues = "https://github.com/your-username/python-llm-token-optimizer/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

# Note: 'ast' is a built-in Python module and does not need to be listed as a dependency.
# If external libraries were needed, they would be listed under [project.dependencies].
# Example: dependencies = ["some-library>=1.0"]